--- a/src/components/__Body/Body.scss
+++ b/src/components/__Body/Body.scss
@@ -13,7 +13,8 @@
     scroll-behavior: smooth;
 
     @media screen and (min-width: 1024px) {
-        max-width: 1440px;
+        max-width: 1240px;
+        margin: 0 auto 0 auto;
     }
 
     .__body--banner1 {
@@ -28,6 +29,7 @@
         position: relative;
 
         @media screen and (min-width: 1024px) {
+            width: 100%;
             margin-bottom: 35px;
             height: 223px;
             border-radius: 25px;
@@ -61,21 +63,19 @@
         overflow: overlay;
 
         @media screen and (min-width: 1024px) {
-            background-color: #F6F6F6;
-            border-radius: 30px;
             @include flex(row, center, flex-start);
             flex-wrap: wrap;
+            width: 100%;
+            background-color: #F6F6F6;
+            border-radius: 30px;
             gap: 4%;  
             margin-bottom: 50px;
         }
 
         .__body--contain_thb--thumb {
             @include flex(column, flex-start, center);
-            width: 100%;
-            height: 100%;
             margin-top: 17px;
             position: relative;
-
             @media screen and (min-width: 1024px) {
                 width: 28%;
                 height: 100%;
