--- a/src/components/__Header/Header.scss
+++ b/src/components/__Header/Header.scss
@@ -8,9 +8,8 @@
     margin: 20px auto 0 auto;
 
     @media screen and (min-width: 1024px) {
-        width: 100%;
-        max-width: 1440px;
-        margin: 60px auto 40px auto;
+        max-width: 1240px;
+        margin: 50px auto 40px auto;
     }
 
     .__header--logo {
