--- a/src/components/__Sheet/Sheet.scss
+++ b/src/components/__Sheet/Sheet.scss
@@ -83,7 +83,7 @@
     margin: -45px 5% 0 5%;
     font-family: $font;
     color: $primary-color;
-    font-weight: 500;
+    font-weight: 700;
     font-size: 18px;
     line-height: 1.8rem;
 
@@ -101,7 +101,7 @@
     margin: 5px 0 10px 5%;
     font-family: $font;
     color: $ft_primary-color;
-    font-weight: 500;
+    font-weight: 700;
     font-size: 14px;
 
     @media screen and (min-width: 1024px) {
@@ -115,7 +115,7 @@
 .tags {
     display: flex;
     flex-direction: row;
-    width: 89.3%;
+    width: 100%;
     gap: 3%;
     margin-left: 5%;
 
@@ -136,8 +136,8 @@
     border-radius: 5px;
     font-family: $font;
     color: $ft_secondary-color;
-    font-weight: 500;
-    font-size: 2.4vw;
+    font-weight: 600;
+    font-size: 9px;
     justify-content: center;
     align-items: center;
     text-wrap: nowrap;
@@ -153,7 +153,7 @@
 .host {
     display: flex;
     flex-direction: row;
-    width: 52%;
+    width: 56.5%;
     font-family: $font;
     color: $primary-color;
     font-weight: 500;
@@ -173,17 +173,17 @@
         display: flex;
         align-content: left;
         width: 50%;
-        margin: 25px 10% 20px;
+        margin: 25px 59% 20px 10%;
 
         @media screen and (min-width: 1024px) {
             font-size: 24px;
+            margin-left: 89.3%;
         }
     }
 
 }
 
 .host p {
-    margin-left: 60%;
 
     @media screen and (min-width: 1024px) {
         margin-left: 0;
